--- a/.github/workflows/deploy-cloud-functions.yml
+++ b/.github/workflows/deploy-cloud-functions.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/cache@v2
         with:
           path: 'functions/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-modules-${{ hashFiles('functions/yarn.lock') }}
 
       - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
