--- a/.github/workflows/deploy-cloud-functions.yml
+++ b/.github/workflows/deploy-cloud-functions.yml
@@ -23,13 +23,13 @@ jobs:
           node-version: '12.x'
 
       - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
+        id: dir-path-yarn-cache
         run: echo "::set-output name=dir::$(yarn cache dir)"
 
       - uses: actions/cache@v2
         id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
         with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          path: ${{ steps.dir-path-yarn-cache.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('functions/yarn.lock') }}
 
       - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
@@ -39,10 +39,15 @@ jobs:
           service_account_key: ${{ secrets.GCP_CI_SERVICE_ACCOUNT_KEY }}
 
       - name: Install dependency
-        if: steps.yarn-cache-dir-path.outputs.cache-hit != 'true'
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: |
           cd functions
           yarn
+
+      - name: Test
+        run: |
+          cd functions
+          yarn test:ci
 
       - name: Deploy Functions
         run: |
