--- a/.github/workflows/deploy-cloud-functions.yml
+++ b/.github/workflows/deploy-cloud-functions.yml
@@ -31,6 +31,8 @@ jobs:
         with:
           path: ${{ steps.dir-path-yarn-cache.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('functions/yarn.lock') }}
+          restore-keys: |
+              ${{ runner.os }}-yarn-
 
       - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
@@ -38,11 +40,10 @@ jobs:
           service_account_email: ci-deploy@corona-weekly-calendar.iam.gserviceaccount.com
           service_account_key: ${{ secrets.GCP_CI_SERVICE_ACCOUNT_KEY }}
 
-      - name: Install dependency
-        if: steps.yarn-cache.outputs.cache-hit != 'true'
+      - name: Install dependency  # --prefer-offlineをつけることで、存在する場合はキャッシュを使用する
         run: |
           cd functions
-          yarn
+          yarn --prefer-offline
 
       - name: Test
         run: |
