--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
+    "comlink-loader": "^2.0.0",
     "date-fns": "^2.16.1",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
