--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "simple-statistics": "^7.3.2",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
