--- a/.github/workflows/deploy-cloud-run.yml
+++ b/.github/workflows/deploy-cloud-run.yml
@@ -42,9 +42,4 @@ jobs:
 
       - name: Deploy to Cloud Run
         run: |
-            gcloud run deploy foobar \
-              --image $IMAGE \
-              --project $GCP_PROJECT \
-              --region $GCP_REGION \
-              --platform managed \
-              --quiet
+            gcloud run deploy corona-calendar --image $IMAGE --project $GCP_PROJECT --region $GCP_REGION --platform managed --quiet
