fix: github workflow

--- a/.github/workflows/deploy-cloud-run.yml
+++ b/.github/workflows/deploy-cloud-run.yml
@@ -18,17 +18,12 @@ jobs:
     name: Deploy Cloud Run
     runs-on: ubuntu-latest
 
-    env:
-      REGION: asia-northeast1
-      GCP_PROJECT: ${{ secrets.GCP_CI_PROJECT_ID }}
-      IMAGE: gcr.io/${{ secrets.GCP_CI_PROJECT_ID }}/corona-calendar:${{ github.sha }}
-
     steps:
       - uses: actions/checkout@v2
 
       - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
-          project_id: $GCP_PROJECT
+          project_id: ${{ secrets.GCP_CI_PROJECT_ID }}
           service_account_email: ${{ secrets.GCP_CI_SERVICE_ACCOUNT_EMAIL }}
           service_account_key: ${{ secrets.GCP_CI_SERVICE_ACCOUNT_KEY }}
 
@@ -43,4 +38,9 @@ jobs:
 
       - name: Deploy to Cloud Run
         run: |
-            gcloud run deploy corona-calendar --image $IMAGE --project $GCP_PROJECT --region $REGION --platform managed --quiet
+            gcloud run deploy corona-calendar \
+              --image gcr.io/${{ secrets.GCP_CI_PROJECT_ID }}/corona-calendar:${{ github.sha }} \
+              --project ${{ secrets.GCP_CI_PROJECT_ID }} \
+              --region asia-northeast1 \
+              --platform managed \
+              --quiet
