--- a/.github/workflows/deploy-cloud-run.yml
+++ b/.github/workflows/deploy-cloud-run.yml
@@ -18,6 +18,9 @@ jobs:
     name: Deploy Cloud Run
     runs-on: ubuntu-latest
 
+    env:
+      IMAGE: gcr.io/${{ secrets.GCP_CI_PROJECT_ID }}/corona-calendar:${{ github.sha }}
+
     steps:
       - uses: actions/checkout@v2
 
@@ -39,7 +42,7 @@ jobs:
       - name: Deploy to Cloud Run
         run: |
             gcloud run deploy corona-calendar \
-              --image gcr.io/${{ secrets.GCP_CI_PROJECT_ID }}/corona-calendar:${{ github.sha }} \
+              --image $IMAGE \
               --project ${{ secrets.GCP_CI_PROJECT_ID }} \
               --region asia-northeast1 \
               --platform managed \
