feat: add github actions lint check

--- a/functions/package.json
+++ b/functions/package.json
@@ -7,9 +7,9 @@
     "deploy": "yarn build;gcloud functions deploy saveCoronaCalendarToGCS --entry-point saveCoronaCalendarToGCS --runtime nodejs12 --trigger-topic saveCoronaCalendarToGCS --memory=512",
     "test": "jest --watchAll",
     "test:ci": "jest",
-    "fix": "run-s fix:eslint fix:prettier",
-    "fix:eslint": "yarn lint:eslint --fix",
-    "fix:prettier": "yarn lint:prettier --write"
+    "fix": "yarn fix:eslint; yarn fix:prettier",
+    "fix:eslint": "eslint --fix 'src/**/*.{tsx,ts,js}'",
+    "fix:prettier": "prettier --write 'src/**/*.{tsx,ts,js}'"
   },
   "license": "MIT",
   "dependencies": {
