--- a/.github/workflows/deploy-cloud-functions.yml
+++ b/.github/workflows/deploy-cloud-functions.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build-deploy:
     name: Deploy Functions
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
       - uses: actions/checkout@v2
@@ -32,11 +32,12 @@ jobs:
           restore-keys: |
               ${{ runner.os }}-yarn-
 
-      - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+      - uses: google-github-actions/setup-gcloud@master
         with:
           project_id: ${{ secrets.GCP_CI_PROJECT_ID }}
           service_account_email: ${{ secrets.GCP_CI_SERVICE_ACCOUNT_EMAIL }}
           service_account_key: ${{ secrets.GCP_CI_SERVICE_ACCOUNT_KEY }}
+          export_default_credentials: true
 
       - name: Install dependency  # --prefer-offlineをつけることで、存在する場合はキャッシュを使用する
         run: |
