--- a/.github/workflows/deploy-cloud-run.yml
+++ b/.github/workflows/deploy-cloud-run.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build-deploy:
     name: Deploy Cloud Run
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     env:
       IMAGE: gcr.io/${{ secrets.GCP_CI_PROJECT_ID }}/corona-calendar:${{ github.sha }}
@@ -15,11 +15,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+      - uses: google-github-actions/setup-gcloud@master
         with:
           project_id: ${{ secrets.GCP_CI_PROJECT_ID }}
           service_account_email: ${{ secrets.GCP_CI_SERVICE_ACCOUNT_EMAIL }}
           service_account_key: ${{ secrets.GCP_CI_SERVICE_ACCOUNT_KEY }}
+          export_default_credentials: true
 
       - name: Configure docker to use the gcloud cli
         run: gcloud auth configure-docker --quiet
