--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -10,7 +10,7 @@ on:
       
 jobs:
   lint-and-test-app:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     name: App (Run ESLint and Prettier)
     steps:
       - uses: actions/checkout@v2
@@ -27,7 +27,7 @@ jobs:
           yarn fix
 
   lint-and-test-cloud-functions:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     name: Cloud Functions (Run ESLint and Prettier)
     steps:
       - uses: actions/checkout@v2
